# Research---Predicting--Synuclein-Pathology-Spread-Across-the-Brain-Connectome

./: .gitignore  README.md  pyproject.toml
configs/: column_map_template.yaml  demo_baselines.yaml  demo_dual_branch.yaml  henderson2019_dual_branch.yaml  henderson2019_dual_branch_lstm.yaml  henderson2019_gnn_only.yaml  henderson2019_gru_only.yaml  henderson2019_logistic_regression.yaml  henderson2019_lstm_only.yaml  henderson2019_mlp.yaml  public_bundle_template.yaml
data/demo/: edges.csv  region_meta.csv  snapshots.csv
data/henderson2019/: edges.csv  region_meta.csv  snapshots.csv
docs/: datasets.md  publication_workflow.md
notebooks/: 01_data_audit.ipynb  02_graph_build.ipynb  03_baseline_training.ipynb  04_dual_branch_training.ipynb  05_paper_figures.ipynb
paper/: main.tex  methodology_diagram.md  references.bib  roc_curve.eps
scripts/: debug_model.py  debug_pipeline.py  download_webdav_recursive.py  export_report_html.py  export_report_pdf.py  generate_architecture_diagram.py  generate_methodology_clean.py  generate_methodology_diagram.py  generate_methodology_noboxes.py  generate_roc_curve.py  ingest_henderson2019.py  optimize_hyperparams.py  optimize_round2.py  optimize_round3.py  print_results.py  run_all_baselines.py  run_full_ablation.py  start_jupyter.ps1
src/ripgnn/: __init__.py  cli.py  config.py  resources.py
src/ripgnn/analysis/: figures.py  interpret.py
src/ripgnn/data/: contracts.py  dataset.py  graph.py  ingest.py  preprocess.py  synthetic.py
src/ripgnn/models/: baselines.py  (+2 more)
tests/: test_data_contracts.py  test_smoke_pipeline.py
(+6 files in other folders)
